--- a/index.html
+++ b/index.html
@@ -186,10 +186,12 @@
                             <li><a href="rubrique 2/cours processus de gestion et modélisation.pdf" target="_blank">📚 Cours processus de gestion et modélisation</a></li>
                             <li><a href="rubrique 2/cours gestion de projet.pdf" target="_blank">📚 Cours gestion de projet</a></li>
                             <li><a href="rubrique 2/cours gestion de projet version étudiant.pdf" target="_blank">📚 Cours gestion de projet version étudiant</a></li>
-                            <li><a href="rubrique 2/cours les livrables phases SI.pdf" target="_blank">📚 Cours les livrables/phases SI</a></li>
+                            <li><a href="rubrique 2/cours les livrables et phases SI.pdf" target="_blank">📚 Cours les livrables phases SI</a></li>
+                            <li><a href="rubrique 2/cours les livrables et phases SI 2.pdf" target="_blank">📚 cours les livrables phases SI 2</a></li>
                             <li><a href="rubrique 2/cours Odoo.pdf" target="_blank">📚 Cours Odoo</a></li>
                             <li><a href="rubrique 2/cours use case.pdf" target="_blank">📚 Cours use case</a></li>
                             <li><a href="rubrique 2/SFG_TalentSeek.pdf" target="_blank">📚 SFG_TalentSeek</a></li>
+                            <li><a href="rubrique 2/cours gestion de projet version étudiant.pdf" target="_blank">📚 Cours gestion de projet version étudiant</a></li>
                         </ul>
                     </div>
                 
@@ -232,10 +234,8 @@
                     </div>
                     <div class="rubrique-content">
                         <ul>
-                            <li><a href="#cahier">Cahier des charges</a></li>
-                            <li><a href="#documentation">Documentation technique</a></li>
-                            <li><a href="#livrable">Livrables</a></li>
-                            <li><a href="#rapport">Rapport final</a></li>
+                            <li><a href="rubrique 5/Rapport de projet.pdf">Rapport de projet</a></li>
+                            
                         </ul>
                     </div>
                 </div>
@@ -248,9 +248,7 @@
                     </div>
                     <div class="rubrique-content">
                         <ul>
-                            <li><a href="#slides">Présentation PowerPoint</a></li>
-                            <li><a href="#script">Script de présentation</a></li>
-                            <li><a href="#demo">Support de démonstration</a></li>
+                            <li><a href="rubrique 6/Diaporama.pdf">Présentation diaporama</a></li>
                         </ul>
                     </div>
                 </div>
